--- a/config/locales/proper.en.yml
+++ b/config/locales/proper.en.yml
@@ -41,10 +41,10 @@ en:
       center:
         header: "Welcome to SPARCRequest"
         subheader: "Storefront of Research Services"
-        description: "<b>SPARCRequest</b> (<b>S</b>ervices, <b>P</b>ricing, & <b>A</b>pplication for <b>R</b>esearch <b>C</b>enters) is a web-based research transaction management system that provides a central portal to researchers and their study teams to browse for research services and resources as well as submit service and pricing requests with a focus on billing compliance and proposal/budget development. SPARCRequest is OSS (Open-Source Software) for which MUSC holds the copyright license. SPARCRequest is developed in a collaborative and public manner for easy adoptability and the source code is available to anyone."
-        cd2h_text: "Services listed in SPARCRequest are discoverable in <a href='http://labs.cd2h.org/search/' target='_blank'><strong>CTSAsearch</strong></a>, part of CD2H’s Science of Translational Science platform."
+        description: "The <b>LINCATS SPARCRequest</b> (<b>S</b>ervices, <b>P</b>ricing, & <b>A</b>pplication for <b>R</b>esearch <b>C</b>enters) is a web-based research transaction management system providing a central portal to research study teams to browse and request our services and resources.<br><br>"
+        cd2h_text: "<br>To learn more about LINCATS, visit stonybrookmedicine.edu/LINCATS<br><br>"
         text: "Browse our service catalog to start a new request<sup>*</sup> or"
-        notice: "* You may only select services applicable to ONE Study or Project at a time"
+        notice: "* New requests can either be added to a brand new study/project in SPARC,or can be added to your previously entered study within SPARC by visiting the Dashboard"
         dashboard_link: "Visit Your Dashboard"
       new_request:
         header: "Is this a new request?"
