--- a/config/locales/proper.en.yml
+++ b/config/locales/proper.en.yml
@@ -42,9 +42,9 @@ en:
         header: "Welcome to SPARCRequest"
         subheader: "Storefront of Research Services"
         description: "The <b>LINCATS SPARCRequest</b> (<b>S</b>ervices, <b>P</b>ricing, & <b>A</b>pplication for <b>R</b>esearch <b>C</b>enters) is a web-based research transaction management system providing a central portal to research study teams to browse and request our services and resources.<br><br>"
-        cd2h_text: "<br>To learn more about LINCATS, visit stonybrookmedicine.edu/LINCATS<br><br>"
+        cd2h_text: "<br>To learn more about LINCATS, visit <a href='https://stonybrookmedicine.edu/LINCATS/' target='_blank'>stonybrookmedicine.edu/LINCATS</a><br><br>"
         text: "Browse our service catalog to start a new request<sup>*</sup> or"
-        notice: "* New requests can either be added to a brand new study/project in SPARC,or can be added to your previously entered study within SPARC by visiting the Dashboard"
+        notice: "* New requests can either be added to a brand new study/project in SPARC, or can be added to your previously entered study within SPARC by visiting the Dashboard"
         dashboard_link: "Visit Your Dashboard"
       new_request:
         header: "Is this a new request?"
